# agent-input-gate

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_input_gate/: __init__.py
tests/: test_agent_input_gate.py  test_gate.py
