[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-input-gate"
version = "0.1.0"
description = "Gate agent inputs with composable validation rules"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agent", "llm", "validation", "guardrails", "prompt-injection", "input"]
authors = [{name = "MukundaKatta"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-input-gate"
Repository = "https://github.com/MukundaKatta/agent-input-gate"
Issues = "https://github.com/MukundaKatta/agent-input-gate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_input_gate = ["py.typed"]
